2011-06-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/include/strutil.h: Safer alternative to 'sprintf'.
	src/graph/include/G.h: Enlarge buffer.
	*/*.c: Use it.

2011-06-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/integrat.spad.pamphlet: Do not signal
	errors on complex integration result.

2011-05-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/rdeefx.spad.pamphlet: Fix trivial case in
	Ei code.

2011-05-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/etc/fricas: Mention '-clefprog' in help output.

2011-05-28  Franz Lehner  <lehner@math.tugraz.at>

	* src/algebra/poly.spad.pamphlet: Comparable instead of OrderedSet
	in FreeModule
	* src/algebra/vsbasis.spad.pamphlet: typo in documentation

2013-05-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	New routine for integration in term of Ei.
	* src/algebra/rdeefx.spad.pamphlet: New file.
	src/algebra/intrf.spad.pamphlet: Generalize 'hermiteIntegrate'
	and 'expintegrate'.
	src/algebra/intef.spad.pamphlet: Use new routine.
	src/algebra/Makefile.in: Adjust.

2013-05-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/rdeef.spad.pamphlet: Remove wrong caching.

2013-05-15  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/vmlisp.lisp: Make sure CGREATERP returns a boolean.

2013-05-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/efstruc.spad.pamphlet: Handle some special
	functions in ker2trigs.

2013-05-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/matcat.spad.pamphlet: Allow extraction
	of empty submatrices.

2013-05-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/matcat.spad.pamphlet,
	src/algebra/polycat.spad.pamphlet,
	src/algebra/vector.spad.pamphlet: Fix size of
	result of 'reducedSystem'.

2013-05-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/catdef.spad.pamphlet: OrderedRing is
	always of CharacteristicZero.

2013-05-10  Gabriel Dos Reis  <gdr@integrable-solutions.net>