@@ -1,3 +1,8 @@
+2011-06-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/graph/viewAlone/spoonComp.c: Fix problem with
+	last commit.
+
 2011-06-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/include/strutil.h: Safer alternative to 'sprintf'.
